# vTTS

./: .gitignore  =2.6  =2.8.0  BENCHMARK.md  CLAUDE.md  DOCKER.md  Dockerfile  ENGINES_SETUP.md  GITHUB_SETUP.md  INSTALL.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_EN.md  README_JA.md  README_ZH.md  RELEASE_CHECKLIST.md  TROUBLESHOOTING.md  benchmark_results.json  docker-compose.yml  kaggle_gptsovits_notebook.ipynb  kaggle_test_notebook.ipynb  pyproject.toml  ref_text.txt  setup.py  testtest.py
.github/: FUNDING.yml  FUNDING_HYBRID.yml
.github/workflows/: release.yml  test.yml
docker/: Dockerfile.cosyvoice  Dockerfile.gptsovits  Dockerfile.supertonic  nginx.conf
docs/: DEPLOYMENT_SUCCESS.md  PROJECT_STRUCTURE.md  README.md  SPONSORS_SETUP.md  TODO.md
docs/i18n/: README_EN.md  README_JA.md
examples/: README.md  basic_usage.py  combined_tts_stt.py  curl_examples.sh  openai_compatible.py  stt_usage.py
tests/: README.md
tests/kaggle/: kaggle_cosyvoice.ipynb  kaggle_gptsovits.ipynb  kaggle_supertonic.ipynb
vtts/: __init__.py  cli.py  client.py
vtts/engines/: __init__.py  bark.py  base.py  chatterbox.py  cosyvoice.py  faster_whisper.py  gptsovits.py  kanitts.py  parler.py  qwen3tts.py  registry.py  speecht5.py  stt_base.py  supertonic.py  vibevoice.py
vtts/engines/_cosyvoice/: __init__.py
vtts/engines/_cosyvoice/cli/: cosyvoice.py  frontend.py  model.py
vtts/engines/_cosyvoice/dataset/: dataset.py  processor.py
vtts/engines/_cosyvoice/flow/: decoder.py  flow.py  flow_matching.py  length_regulator.py
vtts/engines/_cosyvoice/flow/DiT/: dit.py
vtts/engines/_cosyvoice/hifigan/: f0_predictor.py  generator.py  hifigan.py
vtts/engines/_cosyvoice/llm/: llm.py
vtts/engines/_cosyvoice/matcha/: __init__.py  app.py  cli.py
vtts/engines/_cosyvoice/matcha/data/: text_mel_datamodule.py
vtts/engines/_cosyvoice/matcha/models/: baselightningmodule.py  matcha_tts.py
vtts/engines/_cosyvoice/matcha/models/components/: decoder.py  flow_matching.py  text_encoder.py
vtts/engines/_cosyvoice/matcha/onnx/: export.py  infer.py
vtts/engines/_cosyvoice/matcha/text/: __init__.py
vtts/engines/_cosyvoice/matcha/utils/: __init__.py  generate_data_statistics.py  get_durations_from_trained_model.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
vtts/engines/_cosyvoice/matcha/utils/data/: hificaptain.py  ljspeech.py
vtts/engines/_cosyvoice/matcha/utils/monotonic_align/: __init__.py
vtts/engines/_cosyvoice/transformer/: decoder.py  encoder.py  upsample_encoder.py
vtts/engines/_cosyvoice/utils/: class_utils.py  executor.py  train_utils.py
vtts/engines/_gptsovits/: __init__.py  sv.py
vtts/engines/_gptsovits/TTS_infer_pack/: TTS.py  __init__.py
vtts/engines/_supertonic/: __init__.py  helper.py
vtts/server/: __init__.py  app.py  models.py  routes.py  state.py  stt_routes.py
vtts/utils/: __init__.py  audio.py
