[project]
name = "vtts"
version = "0.1.0-beta"
description = "Universal TTS Serving System - vLLM for Text-to-Speech"
authors = [
    {name = "vTTS Contributors"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["tts", "text-to-speech", "serving", "huggingface", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # FastAPI Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    
    # CLI & Utilities
    "click>=8.1.0",
    "httpx>=0.26.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    
    # ML & Audio Processing
    "torch>=2.6.0",  # transformers 보안 패치 요구사항
    "torchaudio>=2.6.0",
    "numpy>=1.24.0,<2.0.0",  # numpy 2.x 호환성 문제 방지
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "pydub>=0.25.0",
    
    # HuggingFace
    "huggingface-hub>=0.20.0",
    "transformers>=4.45.0",  # 기본 버전 (엔진별 업그레이드 필요시 자동 처리)
    
    # ONNX Runtime
    "onnxruntime-gpu>=1.17.0; platform_machine == 'x86_64'",
    "onnxruntime>=1.17.0; platform_machine != 'x86_64'",
    
    # OpenAI SDK (for client)
    "openai>=1.0.0",
    
    # STT Engine (기본 포함)
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

# TTS Engines (선택적 설치)
# Supertonic - 내장됨! ONNX Runtime만 필요
supertonic = []

cosyvoice = [
    # Whisper (CosyVoice frontend 필수!)
    "openai-whisper>=20231117",
    # CosyVoice Dependencies
    "modelscope>=1.9.0",
    "HyperPyYAML>=1.2.0",
    "conformer>=0.3.0",
    "wetext>=0.0.4",
    "x-transformers>=2.11.0",
    "diffusers>=0.29.0",
    "inflect>=7.0.0",
    "pyarrow>=14.0.0",
    "einops>=0.6.0",
    "matplotlib>=3.5.0",  # hifigan 의존성
]

gptsovits = [
    # Core dependencies
    "funasr>=1.0.27",
    "peft>=0.10.0,<0.18.0",
    "ffmpeg-python",
    "torchcodec",
    "pytorch_lightning>=2.0.0",  # AR 모델 의존성
    
    # f5_tts (v3) dependencies
    "x_transformers",
    "rotary_embedding_torch",
    
    # Text processing - multilingual
    "g2p_en",
    "pyopenjtalk>=0.4.1",
    "cn2an",
    "pypinyin",
    "sentencepiece",
    "jieba",
    "jieba_fast",
    "fast_langdetect>=0.3.1",
    "split-lang",
    "wordsegment",
    
    # Korean
    "g2pk2",
    "ko_pron",
    "python-mecab-ko; sys_platform != 'win32'",
    
    # Cantonese
    "ToJyutping",
    "opencc",
]

# Qwen3-TTS - Alibaba's latest TTS model (패치 자동 적용됨)
qwen3tts = [
    "qwen-tts>=0.0.5",
    "accelerate>=1.0.0",
    "einops>=0.6.0",
    "sox>=1.4.0",
]

# Chatterbox - Resemble AI's SoTA TTS
# chatterbox-tts는 --no-deps로 자동 설치됨 (transformers 충돌 우회)
chatterbox = [
    "s3tokenizer>=0.3.0",
    "diffusers>=0.29.0",
    "resemble-perth>=1.0.0",
    "conformer>=0.3.0",
    "spacy-pkuseg",
    "pykakasi>=2.3.0",
    "pyloudnorm",
    "omegaconf",
]

# KaniTTS - High-speed conversational TTS (nemo-toolkit 별도 설치 필요!)
kanitts = [
    "kani-tts>=0.1.0",
    "nemo-toolkit[tts]>=2.1.0",
    "lightning>=2.4.0",
    "lhotse>=1.31.0",
]

# All TTS engines (KaniTTS 제외 - nemo-toolkit 대용량)
# chatterbox-tts는 엔진 로드 시 --no-deps로 자동 설치됨
all = [
    # Whisper (CosyVoice용)
    "openai-whisper>=20231117",
    # CosyVoice
    "modelscope>=1.9.0",
    "HyperPyYAML>=1.2.0",
    "conformer>=0.3.0",
    "wetext>=0.0.4",
    "x-transformers>=2.11.0",
    "diffusers>=0.29.0",
    "inflect>=7.0.0",
    "pyarrow>=14.0.0",
    "einops>=0.6.0",
    "matplotlib>=3.5.0",
    # GPT-SoVITS (Core)
    "funasr>=1.0.27",
    "peft>=0.10.0,<0.18.0",
    "ffmpeg-python",
    "pytorch_lightning>=2.0.0",
    # GPT-SoVITS (f5_tts v3)
    "x_transformers",
    "rotary_embedding_torch",
    # GPT-SoVITS (Text processing)
    "g2p_en",
    "pyopenjtalk>=0.4.1",
    "cn2an",
    "pypinyin",
    "sentencepiece",
    "jieba",
    "jieba_fast",
    "fast_langdetect>=0.3.1",
    "split-lang",
    "wordsegment",
    "g2pk2",
    "ko_pron",
    "python-mecab-ko; sys_platform != 'win32'",
    "ToJyutping",
    "opencc",
    # Qwen3-TTS (패치 자동 적용됨)
    "qwen-tts>=0.0.5",
    "accelerate>=1.0.0",
    "sox>=1.4.0",
    # Chatterbox (의존성만, chatterbox-tts는 엔진에서 --no-deps로 자동 설치)
    "s3tokenizer>=0.3.0",
    "resemble-perth>=1.0.0",
    "spacy-pkuseg",
    "pykakasi>=2.3.0",
    "pyloudnorm",
    "omegaconf",
]

[project.scripts]
vtts = "vtts.cli:main"

[project.urls]
Homepage = "https://github.com/vtts/vtts"
Repository = "https://github.com/vtts/vtts"
Documentation = "https://vtts.readthedocs.io"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vtts*"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
